--- a/DecimoPrimeraSemana/springboottv/userapp/pom.xml
+++ b/DecimoPrimeraSemana/springboottv/userapp/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>userapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>userapp</name>
-	<description>Primer proyecto con Apring Boot - user App</description>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
